# lukeworks-deprecated

./: .env_test  .gitignore  Cargo.toml  README.md  TODO  Test.toml  model_tests.rs  package.json  tsconfig.json  webpack.config.js
deployment/: nginx.conf
docs/: schema.txt
fixtures/2019-02-05-225132_admin_account/: up.sql
fixtures/2019-02-05-225134_default_categories/: down.sql  up.sql
fixtures/2019-02-05-225136_default_posts/: down.sql  up.sql
migrations/2019-02-05-225130_create_account/: down.sql  up.sql
migrations/2019-02-05-225130_create_author/: down.sql  up.sql
migrations/2019-02-05-225131_add_admin/: down.sql  up.sql
migrations/2019-02-05-225131_create_category/: up.sql
migrations/2019-02-05-225132_create_category/: up.sql
migrations/2019-02-05-225132_create_post/: up.sql
migrations/2019-02-05-225133_add_categories/: up.sql
migrations/2019-02-05-225134_create_post/: up.sql
migrations/2019-03-11-223757_add_posts/: down.sql  up.sql
migrations/2020-02-20-205300_create_user/: up.sql
migrations/2020-02-20-205309_create_account/: down.sql  up.sql
migrations/2020-02-20-205333_create_category/: up.sql
migrations/2020-02-20-205335_create_tag/: up.sql
migrations/2020-02-20-205341_create_post/: up.sql
migrations/2020-02-20-205342_create_post_author/: down.sql
migrations/2020-02-20-205345_create_post_tag/: up.sql
migrations/2020-02-20-205405_create_comment/: up.sql
migrations/2020-02-20-205412_create_subscription/: up.sql
migrations/2020-02-20-223015_add_user_accounts/: up.sql
migrations/2020-02-20-223035_add_category_tags/: down.sql  up.sql
migrations/2020-02-20-223046_add_posts/: down.sql  up.sql
migrations/2020-02-20-223115_add_projects/: down.sql  up.sql
public/: index.html  manifest.json
public/projects/: flocking-simulation.html
src/: db.rs  filters.rs  index.css  index.js  index.tsx  lib.rs  main.rs  models.rs  react-app-env.d.ts  response.rs  routes.rs  schema.patch  schema.rs  sql_types.rs  template.rs
src/components/: App.js  Header.js  Lukeworks.js  Lukeworks.tsx  Portfolio.css  Portfolio.js  Portfolio.tsx  Resume.css  Resume.js  Resume.tsx
src/hooks/: useAsync.js  useAsync.tsx
src/models/: account.rs  author.rs  category.rs  post.rs  user.rs
src/routes/: account.rs  admin.rs  author.rs  category.rs  post.rs  projects.rs  root.rs
src/server/: .env.sample  Cargo.toml
src/wedding/: kateandluke.ts
static/: bundle.js
static/scripts/: matrix.js  maze_astar.js  resume.js
static/styles/: kateandluke.css  main.css  resume.css
templates/: base.html.tera  blog.html.tera
templates/admin/: index.html.tera
templates/http/: 404.html.tera
templates/post/: blog.html.tera  category.html.tera  projects.html.tera
(+103 files in other folders)
