[package]
name = "luke_web"
version = "0.1.0"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
edition = "2018"
homepage = "https://lukeworks.tech"
license = "GPL-3.0"
publish = false
readme = "README.md"
repository = "https://github.com/lukexor/luke_web"
description = """A blog and project portfolio by Lucas Petherbridge on programming and technology."""

[features]
database = []

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.15.0"
libmath = "0.2.1"
pulldown-cmark = { version = "0.6.1", default-features = false }
rand = "0.7.3"
rocket = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }

[dependencies.rocket_contrib]
default-features = false
version = "0.4.2"
features = ["diesel_postgres_pool", "helmet", "json", "serve", "tera_templates"]

[dev-dependencies]
fake = "2.2.0"
